--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-pandas==2.1.3 pyarrow==4.0.0 requests==2.26.0 azure-storage-file-datalake==12.5.0 azure-identity==1.6.1 flask==3.0.0 plotly==5.3.1
+
+pandas==1.2.4
+PyYAML==5.4.1
+flask==2.0.2
+azure-storage-blob==12.9.0
+azure-identity==1.7.1
+azure-datafactory==0.14.0
+pyarrow==5.0.0
+plotly==5.3.1
+powerbi-api-client==1.0.0
+azure-logic-apps==0.2.0
